--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
 <div class="navbar-header">
 <a href="index.html" class="-pull-left visible-md visible-lg">
 <div class="navbar-brand">
-<h1> FOOD, LLC</h1>
+<h1 id="h1"> FOOD, LLC</h1>
 </div>
 
 <div id="collapsable-nav" class="collapse navbar-collapse">
